--- a/index.ipynb
+++ b/index.ipynb
@@ -298,7 +298,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants\n",
-    "        if restaurant[;]"
+    "        if restaurant['is_closed']\n",
+    "            "
    ]
   },
   {
