--- a/index.ipynb
+++ b/index.ipynb
@@ -297,9 +297,10 @@
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
+    "    a = []\n",
     "    for restaurant in restaurants\n",
     "        if restaurant['is_closed']\n",
-    "            a"
+    "            a.appends(resta)"
    ]
   },
   {
