--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,8 @@
     "    a = []\n",
     "    for restaurant in restaurants\n",
     "        if restaurant['is_closed']\n",
-    "            a.appends(resta)"
+    "            a.appends(restaurant)\n",
+    "    retunr"
    ]
   },
   {
