Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,25 +283,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-13-6ffb4c968fdf>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-16-82530920c820>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-6ffb4c968fdf>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-82530920c820>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if restaurant['is_closed']\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    a = []\n",
-    "    for restaurant in restaurants\n",
+    "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed']\n",
     "            a.appends(restaurant)\n",
-    "    retunr"
+    "    return a"
    ]
   },
   {
