Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed']:\n",
     "            a.append(restaurant)\n",
-    "    return a"
+    "    return restaurant-a"
    ]
   },
   {
