--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,7 @@
     "def open_restaurants(restaurants):\n",
     "    a = []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is_closed']:\n",
+    "        if restaurant['is_closed'] !=:\n",
     "            a.append(restaurant)\n",
     "    return a"
    ]
